Fixed some bugs and added a reflection test